# Modular

./: README.md
DSPCore/: .gitignore  CMakeLists.txt  README.md
DSPCore/demo/: graph.cpp  main.cpp  rtaudioio.h  sandbox.cpp  sound.cpp
DSPCore/dsp/: CMakeLists.txt
DSPCore/dsp/include/: asset.hpp  audio.hpp  dsp.hpp  engine.hpp
DSPCore/dsp/include/dsp/: base.hpp  buffer.hpp  digital.hpp  filter.hpp  fir.hpp  functions.hpp  math.hpp  minblep.hpp  noise.hpp  ode.hpp  resampler.hpp  ringbuffer.hpp  signal.hpp  table.hpp
DSPCore/dsp/include/util/: common.hpp  math.hpp  notes.hpp  random.hpp
DSPCore/dsp/src/: asset.cpp  audio.cpp  engine.cpp
DSPCore/dsp/src/dsp/: filter.cpp  math.cpp  minblep.cpp  noise.cpp  signal.cpp  table.cpp
DSPCore/dsp/src/util/: logger.cpp  string.cpp
DSPCore/modules/: CMakeLists.txt  library.cpp  library.hpp  module_library.hpp
DSPCore/modules/AudibleInstruments/: AudibleInstruments.hpp  Branches.hpp
DSPCore/modules/Befaco/: Attenuverter.hpp  Befaco.hpp  EvenVCO.hpp  Mixer.hpp  Mixer1.hpp  Mixer2.hpp
DSPCore/modules/Core/: AudioInterface.hpp  Core.hpp  DC.hpp
DSPCore/modules/Experimental/: AudibleInstruments.hpp  Branches.hpp  EvenVCO.hpp  Experimental.hpp  FreeVerb.hpp  JW-Modules.hpp  LRTVCO.hpp  ML_Modules.hpp  Plateau.hpp  Sandbox.hpp  ShiftRegister.hpp  Slop.hpp  Tides.hpp
DSPCore/modules/Experimental/LRTdsp/: DSPEffect.hpp  DSPMath.cpp  DSPMath.hpp
DSPCore/modules/Experimental/Ocean/: Ocean.hpp  TidalGenerator.hpp
DSPCore/modules/Experimental/dsp/: Dattorro.hpp  InterpDelay.hpp  OTAFilter.hpp
DSPCore/modules/Experimental/mutable/: generator.cc  generator.h
DSPCore/modules/Fundamental/: ADSR.hpp  Delay.hpp  Fundamental.hpp  LFO.hpp  LadderFilter.hpp  LowFrequencyOscillator.hpp  Scope.hpp  Seq3.hpp  VCA.hpp  VCF.hpp  VCO.hpp  VCO1.hpp  VCO2.hpp  VoltageControlledOscillator.h
DSPCore/modules/JW-Modules/: JW-Modules.hpp  Quantizer.hpp  SimpleClock.hpp
DSPCore/modules/ML_Modules/: ML_Modules.hpp  ShiftRegister.hpp
DSPCore/modules/Mixers/: FourToOne.hpp  Mixers.hpp  XFade.hpp
DSPCore/modules/Notes/: Detune.hpp  Notes.hpp  Octave.hpp  Quantizer.hpp  Reftone.hpp  SEQ.hpp  Scale.hpp  Semitones.hpp
DSPCore/modules/Prime/: ADSR.hpp  Delay.hpp  LFO.hpp  LadderFilter.hpp  LowFrequencyOscillator.hpp  Prime.hpp  Seq3.hpp  SimpleClock.hpp  VCA.hpp  VCF.hpp  VCO1.hpp  VCO2.hpp  VoltageControlledOscillator.h
DSPCore/modules/Primes/: ADSR.hpp  Delay.hpp  LFO.hpp  LadderFilter.hpp  LowFrequencyOscillator.hpp  Primes.hpp  Seq3.hpp  SimpleClock.hpp  VCA.hpp  VCF.hpp  VCO1.hpp  VCO2.hpp  VoltageControlledOscillator.h
DSPCore/modules/Scopes/: History.hpp  Scopes.hpp  Tuner.hpp  Value.hpp  VoltMeter.hpp  Waveform.hpp
DSPCore/modules/Simples/: Add.hpp  Atten.hpp  Atten1.hpp  Atten2.hpp  AttenOff.hpp  Attenuverter.hpp  DC.hpp  Manual.hpp  Multiply.hpp  Mute.hpp  Offset.hpp  Pad.hpp  Simples.hpp  Switch.hpp  Toggle.hpp  Trigger.hpp  Unity.hpp  VertOff.hpp
DSPCore/modules/Sources/: ADSR.hpp  Delay.hpp  LFO.hpp  LadderFilter.hpp  LowFrequencyOscillator.hpp  OSC.hpp  Sources.hpp  VCA.hpp  VCF.hpp  VCO2.hpp  VoltageControlledOscillator.h
DSPCore/modules/Times/: Clock.hpp  Clock2.hpp  ClockDivider.hpp  Times.hpp
DSPCore/modules/Utilities/: Demux.hpp  FlipFlop.hpp  Math.hpp  Mux.hpp  SampleHold.hpp  ShiftRegister.hpp  Slew.hpp  TriggerToGate.hpp  Utilities.hpp
MaxMSP/: Semi_01.maxpat  sandbox.maxpat  sandbox2.maxpat  session01.maxpat  single_osc_drone.maxpat
MaxMSP/_SAVE/: 010-drone.maxpat  020-generative.maxpat  320270__xserra__buddhist-2.wav.reapeaks  8A.2a.wav.reapeaks  FormantGenerator.maxpat  basic.maxpat  basic_synth.maxpat  envelopes.maxpat  faustgen.maxpat  littlefilter~.maxpat  primes.lfo.maxpat  primes.vco.maxpat  pulse5.maxpat  rack_test.maxpat  reson_whistle.maxpat  rotating_notes.maxpat  sandbox.maxpat  synthcore1_2.maxpat  tester.maxpat  tiny.lfo.maxpat  tiny.lpf.maxpat  tiny.vco.maxpat  x0025_basic_synth.maxpat
MaxMSP/modules/: amp.attenuverter.maxpat  bipolar-led.maxpat  effects.delay.maxpat  filters.ladder.maxpat  filters.lpf.maxpat  filters.vcf-lp.maxpat  fund_seq_switch_1to4.maxpat  mod.adsr.maxpat  mod.basic-lfo.maxpat  mod.lfo.maxpat  modulation.lfo.maxpat  notes-triggers.clock-1.maxpat  notes-triggers.clock-divider.maxpat  notes-triggers.clock.maxpat  routing.attenuverter.maxpat  routing.mixer.maxpat  routing.probability.maxpat  routing.vca.maxpat  sources.basic-vco.maxpat  sources.vco.maxpat  times.clock-divider.maxpat  utilities.demux.maxpat  utilities.mux.maxpat  utilities.s&h.maxpat  utilities.slew.maxpat
Modular/: AudioTestViewController.swift  MainViewController.h  MainViewController.mm  Modular-Bridging-Header.h  Podfile  WireWidget.h  WireWidget.mm
Modular.xcodeproj/: project.pbxproj
Modular/Base.lproj/: Main.storyboard
Modular/Engine/: EngineAudioInterface.mm  Rack.h  Rack.m  audio.h  engine.cpp  engine.h
Modular/Modular/: DocumentBrowserViewController.swift  Info.plist  MasterPatchViewController.swift  ModuleBrowserViewController.swift  Untitled.modpatch  ViewController.swift
Modular/Modular.xcodeproj/: project.pbxproj
Modular/Modules/: AudioIOWidget.hpp  AudioIOWidget.mm  AudioInterfaceWidget.hpp  AudioInterfaceWidget.mm  ModuleBuilder.h  ModuleBuilder.mm  Osc1Widget.h  Osc1Widget.hpp  Osc1Widget.mm  audio_interface.h  osc1.h
Rack/: Rack.h
Rack/Engine/: EngineAudioInterface.h  EngineAudioInterface.mm  Rack.swift  audio.h  audio.hpp  engine.cpp  engine.h  engine.hpp  module.h
SAVE/Modular.xcodeproj/: project.pbxproj
VCNode/: Podfile
(+209 files in other folders)
